added tailwind css cdn

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,25 @@
 <!-- =========== Tailwind css CDN =========== -->
 <script src="https://cdn.tailwindcss.com"></script>
 <body>
-    
+    <div class="nav-hero">
+        <div class="nav-section">
+     
+     <div class="logo">
+         <img src="/images/vhyee 1.png" alt="">
+     </div>
+     <nav>
+         <a href="index.html">Home</a>
+        <a href="#aboutUs">About Us</a>
+        <a href="#services">Services</a>
+        <a href="contact.html">Contact Us</a>
+     </nav>
+     <div class="nav-btn">
+        <a href="contact.html">Get a quote
+         <img src="images/Vector (8).png" alt="" class="btn-arrow">
+        </a> 
+     </div>
+ </div>  
+     </div>
+    <h1 class="text-xs">Welcome to contact page</h1>
 </body>
 </html>
