removed tailwind cdn

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="icon" href="images/gym.png">
     <!-- Stylesheet Link -->
     <link rel="stylesheet" href="style.css">
-    <!-- =========== Tailwind css CDN =========== -->
-<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="nav-hero">
@@ -78,7 +76,7 @@
          <div class="section-two">
             <div class="text-box">
                 <div class="section-two-header">
-                    <h1>You Need A Clean Enviroment</h1>
+                    <h1 class="text-sm">You Need A Clean Enviroment</h1>
                 </div>
                 <div class="section-two-text">
                     <p>
@@ -173,7 +171,7 @@
                         <div class="text-box">
                             <div class="text-set">
                                  <h1>Why choose Us?</h1>
-                                <div class="section-set">
+                                <div class="section-set" class="w-5">
                                     <div class="set">
                                         <img src="images/Vector (4).png" alt="">
                                         <div class="set-title">Professional <br> Services</div>
